--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,4 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
-volumes:
-  pgdata:
+      - ./pgdata:/var/lib/postgresql/data
