Refactor file handling and enhance UI features; integrate support for Excel and Word file uploads, and improve database information display.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update && \
     poppler-utils \
     libgl1 \
     build-essential \
+    libmagic1 \
     && apt-get clean
 ENV PYTHONPATH=/app
 
