--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -23,6 +23,10 @@ python-dotenv = "^1.0.1"
 pdfplumber = "^0.10.3"
 pdf2image = "^1.17.0"
 Pillow = "^10.3.0"
+pandas = "^2.2.1"
+openpyxl = "^3.1.2"
+python-docx = "^1.1.0"
+python-magic = "^0.4.27"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
